<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefault"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title"
        android:textColor="@color/colorText"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/text_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_amount"
        android:textSize="26sp"
        android:textColor="@color/colorText"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25sp"
        />

    <Button
        android:id="@+id/btn_makeItRain"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/makeItRain"
        android:background="@color/colorButton"
        android:textColor="@color/colorDefault"
        android:textSize="19sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="makeItRain"
        />

    <Button
        android:id="@+id/btn_toastMsg"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/showToastMsg"
        android:textSize="19sp"
        android:background="@color/colorButton"
        android:textColor="@color/colorDefault"
        app:layout_constraintTop_toBottomOf="@id/btn_makeItRain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:onClick="toastMessage"/>

    <Button
        android:id="@+id/btn_logMsg"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/showLogMsg"
        android:textSize="19sp"
        android:background="@color/colorButton"
        android:textColor="@color/colorDefault"
        app:layout_constraintTop_toBottomOf="@id/btn_toastMsg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:onClick="logMessage"/>


</androidx.constraintlayout.widget.ConstraintLayout>